# DistrbutedSchedulingCenter

./: .gitignore  CMakeLists.txt  CMakelists.txt
.cache/clangd/index/: branchoffice.cc.A828B17CED51186C.idx  branchoffice.cc.A8863152E4FC0F29.idx  branchoffice.h.102335704709BE7F.idx  main.cc.03675473B6153996.idx  main.cc.BD371FDF4F666F97.idx  plugin.cc.40E440773E3D9997.idx  plugin.cc.8C307C1E6894C068.idx  plugin.h.B57E90B83E6FE3D2.idx  pluginmanager.cc.31B3F4A3628E3F92.idx  pluginmanager.cc.3AFD66847434CF07.idx  schedulingcenter.cc.422C2517D2EBFB35.idx  schedulingcenter.cc.F7B9F84A9FFA7166.idx  schedulingcenter.h.2F40BD241D5883BF.idx  task.cc.85B2F0C757B270E3.idx  task.cc.F0278BE6D7AF288E.idx  task.h.2A610713E5EA60E2.idx  taskmigrator.cc.B358AA3EA662C7C2.idx  taskmigrator.cc.E831825B2F8F21D3.idx  tcpclient.cc.C8F9ADC5D98C2E00.idx  tcpclient.h.57160445FACB113D.idx  tcpserver.cc.1892E17036BA76AD.idx  tcpserver.h.3C3A7E8D8ED1F8ED.idx  vehicle.cc.4103CBC5A8DD83C3.idx  vehicle.cc.7E8081DBF606245C.idx  vehicle.h.CDC075FB1D1EFB28.idx
include/: brachoffice.h  branchoffice.h  plugin.h  pluginmanager.h  schedulingcenter.h  serializable.h  task.h  taskmigrator.h  tcpclient.h  tcpserver.h  utils.h  vehicle.h
src/: branchoffice.cc  client_main.cc  funcv1.cc  funcv2.cc  main.cc  plugin.cc  pluginmanager.cc  schedulingcenter.cc  server_main.cc  task.cc  tcpclient.cc  tcpserver.cc  vehicle.cc
